新增输出颜色和进度条

--- a/bin/setting.ini
+++ b/bin/setting.ini
@@ -3,4 +3,4 @@
 #SFTP格式样例:admin/admin@127.0.0.1:22  用户名/密码@IP地址:端口
 #请务必在第五行填写db地址 第六行SFTP地址
 apps/apps@192.168.15.94:1531/NRDEV
-admin/admin@127.0.0.1:22
+test/test@192.168.15.71:22
